--- a/style.css
+++ b/style.css
@@ -51,3 +51,36 @@ h2 {
 .flex > ul {
   flex: 1;
 }
+
+.flex > div:first-child {
+  margin-right: 20px;
+}
+
+.flex > div:last-child {
+  margin-left: 20px;
+}
+
+/* Nav styling */
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 30px 0;
+}
+
+nav ul {
+  display: flex;
+  padding: 0;
+  list-style-type: none;
+}
+
+nav ul li {
+  margin-left: 50px;
+}
+
+nav ul a {
+  color: hsl(243, 87%, 12%);
+  font-family: "Raleway", sans-serif;
+  text-decoration: none;
+}
